fixed footer links in the bottom and align right the picture for students

--- a/sass/components/navigation/_navigation.scss
+++ b/sass/components/navigation/_navigation.scss
@@ -296,6 +296,7 @@
 .site-footer nav ul {
   list-style-type: none;
   margin: 0;
+  padding: 0;
   text-align: center;
 }
 
